--- a/README.html
+++ b/README.html
@@ -5,7 +5,8 @@
       </head>
       <body>
         <p>LAba diena</p>
-<p>Viso gero!</p>
+<p>Viso gero!
+labas rytas!</p>
 
       </body>
     </html>
